Clean up RestconfInvokeOperationsUtil
RPC/action invocation through mount point and service is the same,
except for an additional lookup/throws. Restructure code to take
advantage of that.

JIRA: NETCONF-773
Change-Id: I68a4d75564b2f0a42070ad9f8ebd140109a6eb62
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>